pxc/tests/test_116_mrefvar/mrv.px
public namespace mrv;
import core::common -;

function int foo(int x)
{
  return x * 2;
}

{
  const int& v1 = foo(3); // ok
  println(v1);
  mutable int& v2 = foo(3); // error
  println(v2);
}
